module8/code/k8s_code/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress-test
  annotations:
    kubernetes.io/ingress.class: "nginx"   
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - darrenli.com
      secretName: darrenli-tls  
  rules:
  - http:
      paths:       
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: main-ing-svc
            port:
              number: 8083
